tests/ui/dyn-star/param-env-infer.current.stderr
warning: the feature `dyn_star` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/param-env-infer.rs:5:12
   |
LL | #![feature(dyn_star, pointer_like_trait)]
   |            ^^^^^^^^
   |
   = note: see issue #102425 <https://github.com/rust-lang/rust/issues/102425> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0282]: type annotations needed
  --> $DIR/param-env-infer.rs:13:10
   |
LL |     t as _
   |          ^ cannot infer type

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0282`.
